--- a/main/index.html
+++ b/main/index.html
@@ -20,7 +20,7 @@
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">TEAM</a>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#team">TEAM</a>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">ABOUT</a>
                         </li>
@@ -61,14 +61,40 @@
                 <!-- search bar -->
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
                     <form>
-                      <div class="form-row">
-                        <div class="col-12 col-md-9 mb-2 mb-md-0">
-                          <input type="url" class="form-control form-control-lg" placeholder="請輸入網址">
+                        <div class="form-row">
+                            <div class="col-12 col-md-8 mb-2 mb-md-0">
+                                <input type="url" class="form-control form-control-lg" placeholder="請輸入網址">
+                            </div>
+                            <div class="col-12 col-md-2">
+                                <!-- need to change type to submit later -->
+                                <!-- add toggel result div on query button -->
+                                <button type="button" class="btn btn-block btn-lg btn-primary query" data-target="#targetElement" data-toggle="collapse">查詢</button>
+                            </div>
+                            <div class="col-12 col-md-2">
+                                 <!-- need to change type to submit later -->
+                                <button type="button" class="btn btn-block btn-lg btn-dark report">舉報</button>
+                            </div>
+                            <!-- show result div here -->
                         </div>
-                        <div class="col-12 col-md-3">
-                          <button type="submit" class="btn btn-block btn-lg btn-primary">查詢!</button>
+                        </br>
+                        <div class="collapse" id="targetElement">
+                            <div class="panel panel-default">
+                                <!-- 插入新數字 -->
+                                <h3>
+                                    確認結果中
+                                </h3>
+                                <ul>
+                                    <li>字典分數： </li>
+                                    <li>mx分數： </li>
+                                    <li>domain更新日期分數： </li>
+                                    <li>domain新增日期分數： </li>
+                                    <li>domain過期日期分數： </li>
+                                </ul>
+                                <h4>
+                                    結果：
+                                </h4>
+                            </div>
                         </div>
-                      </div>
                     </form>
                 </div>
             </div>
@@ -96,7 +122,7 @@
                 </div>
             </div>
         </section>
-        <section class="page-section portfolio" id="portfolio">
+        <section class="page-section portfolio" id="team">
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <div class="text-center">
@@ -346,5 +372,9 @@
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <!-- my scripts -->
+        <script>
+
+        </script>
     </body>
 </html>
