upgrade search toggle result box with fetch

--- a/main/admin/tables.html
+++ b/main/admin/tables.html
@@ -13,7 +13,7 @@
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-            <a class="navbar-brand" href="../index.html">詐彈超人後台</a>
+            <a class="navbar-brand" href="../index.html">詐騙網站辨識後台</a>
             <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
             <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
@@ -44,7 +44,7 @@
                             </a>
                             <a class="nav-link" href="#">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                API Document
+                                Admin API Document
                             </a> 
                         </div>
                     </div>
@@ -104,68 +104,6 @@
                                             <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
                                         </td>
                                     </tr>
-                                    <tr>
-                                        <td>126</td>
-                                        <td>badbanana</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>128</td>
-                                        <td>appppple</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>129</td>
-                                        <td>thisisfake</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>130</td>
-                                        <td>FRAUD</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>131</td>
-                                        <td>ugly</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>132</td>
-                                        <td>nono</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>133</td>
-                                        <td>whatapp</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th>134</td>
-                                        <td>NotFB</td>
-                                        <td><button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>135</td>
-                                        <td>notApple</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
                                 </tbody>
                                 </table>
                             </div>
@@ -206,77 +144,6 @@
                                         <td>125</td>
                                         <td>20200903</td>
                                         <td>m1cr0soft</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>126</td>
-                                        <td>20200904</td>
-                                        <td>badbanana</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>128</td>
-                                        <td>20200905</td>
-                                        <td>appppple</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>129</td>
-                                        <td>20200906</td>
-                                        <td>thisisfake</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>130</td>
-                                        <td>20200907</td>
-                                        <td>FRAUD</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>131</td>
-                                        <td>20200908</td>
-                                        <td>ugly</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>132</td>
-                                        <td>20200909</td>
-                                        <td>nono</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>133</td>
-                                        <td>20200910</td>
-                                        <td>whatapp</td>
-                                        <td>
-                                            <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th>134</td>
-                                        <td>20200911</td>
-                                        <td>NotFB</td>
-                                        <td><button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>135</td>
-                                        <td>20200912</td>
-                                        <td>notApple</td>
                                         <td>
                                             <button class="btn btn-danger badge-pill btn-sm delete">DELETE</button>
                                         </td>
